--- a/config.env
+++ b/config.env
@@ -19,9 +19,9 @@ PM_PERMIT='no'
 ANTIDELETE1='yes'
 ANTIDELETE2='yes'
 MENUTYPE='1'
-PRESENCE=''
+PRESENCE='online'
 AUDIO_REPLY='yes'
-NUMERO_OWNER= "254xxxxx"
-SESSION_ID=''
+NUMERO_OWNER= "254725900603"
+SESSION_ID='bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net'
 
 
